[gd_scene load_steps=4 format=3 uid="uid://dp2hhyf33045p"]

[ext_resource type="FontFile" uid="uid://bjlmtdrlcnxv7" path="res://Sprites/fontNumber/Blockstepped 3D.ttf" id="1_4vxdi"]
[ext_resource type="Script" path="res://menu_interfaz.gd" id="1_66x5a"]
[ext_resource type="FontFile" uid="uid://cul52mgbkstx8" path="res://Sprites/WelcometoTexas.ttf" id="2_umdkp"]

[node name="MenuInterfaz" type="CanvasLayer"]
script = ExtResource("1_66x5a")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -70.5
offset_right = 70.5
offset_bottom = 116.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_4vxdi")
theme_override_font_sizes/font_size = 35
horizontal_alignment = 1
vertical_alignment = 1

[node name="Mensaje" type="Label" parent="."]
offset_left = 22.0
offset_top = 258.0
offset_right = 595.0
offset_bottom = 497.0
theme_override_colors/font_color = Color(0.937255, 0.129412, 0.521569, 1)
theme_override_fonts/font = ExtResource("2_umdkp")
theme_override_font_sizes/font_size = 60
text = "Revenange
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -86.0
offset_top = -260.0
offset_right = 79.0
offset_bottom = -163.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("2_umdkp")
theme_override_font_sizes/font_size = 60
text = "PLAY"

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
